# apexmatch

./: .gitignore  PROJECT_SUMMARY.md  README.md  TECHNICAL_ALIGNMENT_REPORT.md  requirements.md
apexmatch-engine-rs/: Cargo.toml
apexmatch-engine-rs/benches/: matching_bench.rs
apexmatch-engine-rs/src/: engine.rs  ffi.rs  lib.rs  order.rs  orderbook.rs  wal.rs
apexmatch-java/: pom.xml
apexmatch-java/apexmatch-account/: pom.xml
apexmatch-java/apexmatch-agent/: pom.xml
apexmatch-java/apexmatch-aml/: pom.xml
apexmatch-java/apexmatch-common/: pom.xml
apexmatch-java/apexmatch-dex-aggregator/: pom.xml
apexmatch-java/apexmatch-engine-api/: pom.xml
apexmatch-java/apexmatch-engine-java/: pom.xml
apexmatch-java/apexmatch-engine-rust-adapter/: pom.xml
apexmatch-java/apexmatch-gateway/: pom.xml
apexmatch-java/apexmatch-gateway/src/main/java/com/apexmatch/gateway/: GatewayApplication.java
apexmatch-java/apexmatch-gateway/src/main/resources/: application.yml
apexmatch-java/apexmatch-ha/: pom.xml
apexmatch-java/apexmatch-market-data/: pom.xml
apexmatch-java/apexmatch-risk/: pom.xml
apexmatch-java/apexmatch-router/: pom.xml
apexmatch-java/apexmatch-router/src/main/java/com/apexmatch/router/: ConsistentHashRing.java  EngineNode.java  InMemoryServiceRegistry.java  ServiceRegistry.java  ShardManager.java
apexmatch-java/apexmatch-router/src/test/java/com/apexmatch/router/: ConsistentHashRingTest.java  ShardManagerTest.java
apexmatch-java/apexmatch-settlement/: pom.xml
apexmatch-java/apexmatch-wealth/: pom.xml
(+149 files in other folders)
