[package]
name = "apexmatch-engine-rs"
version = "0.1.0"
edition = "2021"
description = "ApexMatch Rust 高性能撮合引擎（动态库 + 内部单测）"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"
rust_decimal = { version = "1.35", features = ["serde-with-str", "macros"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"

[[bench]]
name = "matching_bench"
harness = false
